tests/baselines/reference/specializedSignatureAsCallbackParameter1.errors.txt
tests/cases/compiler/specializedSignatureAsCallbackParameter1.ts(7,1): error TS2755: No suitable overload for this call.
tests/cases/compiler/specializedSignatureAsCallbackParameter1.ts(8,1): error TS2755: No suitable overload for this call.


==== tests/cases/compiler/specializedSignatureAsCallbackParameter1.ts (2 errors) ====
    function x3(a: number, cb: (x: number) => number);
    function x3(a: string, cb: (x: number) => number);
    function x3(a: any, cb: (x: number) => number) {
       cb(a);
    }
    // both are errors
    x3(1, (x: string) => 1); 
    ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2755: No suitable overload for this call.
!!! related TS2757 tests/cases/compiler/specializedSignatureAsCallbackParameter1.ts:7:7: Overload 1 of 2, '(a: number, cb: (x: number) => number): any', gave the following error.
  Argument of type '(x: string) => number' is not assignable to parameter of type '(x: number) => number'.
    Types of parameters 'x' and 'x' are incompatible.
      Type 'number' is not assignable to type 'string'.
!!! related TS2757 tests/cases/compiler/specializedSignatureAsCallbackParameter1.ts:7:4: Overload 2 of 2, '(a: string, cb: (x: number) => number): any', gave the following error.
  Argument of type '1' is not assignable to parameter of type 'string'.
    x3(1, (x: 'hm') => 1); 
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2755: No suitable overload for this call.
!!! related TS2757 tests/cases/compiler/specializedSignatureAsCallbackParameter1.ts:8:7: Overload 1 of 2, '(a: number, cb: (x: number) => number): any', gave the following error.
  Argument of type '(x: "hm") => number' is not assignable to parameter of type '(x: number) => number'.
    Types of parameters 'x' and 'x' are incompatible.
      Type 'number' is not assignable to type '"hm"'.
!!! related TS2757 tests/cases/compiler/specializedSignatureAsCallbackParameter1.ts:8:4: Overload 2 of 2, '(a: string, cb: (x: number) => number): any', gave the following error.
  Argument of type '1' is not assignable to parameter of type 'string'.